# resume_tailoring

./: .gitignore  README.md  TODO.md  fastapi_server.py  filesystem_mcp_server_tools.py  langgraph.json  langsmith_evaluator.py  pyproject.toml  resume_tailoring_agent.py  resume_tailoring_tools.py  terminal_chat_loop.py  user_experience_gathering_tools.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
arena_prep/: AI-Intelligence-Briefing-Complete-FINAL.md  AI-Intelligence-Briefing-Complete.md  README.md  email-template-complete.md  index-simple.html  index.html  main.js  styles.css  test.html
arena_prep/demos/: ai-scientist-demo.md  browser-agents-demo.md  claude4-demo.md  codex-demo.md  demo.md  geo-demo.md  googleio-demo.md  windows-mcp-demo.md
arena_prep/docs/: initial_prompt.md  notes.md  requirements.md
business_plan/: next_steps_1.md  next_steps_3.md
docs/: graph_state_identification.md  subgraph_architecture.md
evaluators/: against_ideal_evaluator.py  cover_letter_evaluator.py  langsmith_evaluator.py  resume_tailoring_evaluator.py
examples/: client_usage.py
full_tailor_resume/: README.md  graph.py  main_agent.py
old/: fastapi_server.py  terminal_chat_loop.py
output_grading/: output_grading.py
plan/: next_goals.md  next_steps_2.md  plan.md
prompts/: cover_letter_evaluation_prompt.py  general_resume_advice_prompt.py  resume_tailoring_evaluation_prompt.py
resume_tailoring/: resume_tailoring_agent.py
src/: README.md  graph.py  llm_config.py  main_agent.py  state.py  test_graph.py
tests/: README.md
tools/: README.md  mcp_servers_tools.py  parse_pdf_tool.py  resume_tailoring_tools.py  supabase_storage_tools.py  user_experience_gathering_tools.py
(+103 files in other folders)
