[project]
name = "resume_tailoring"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    "mcp (>=1.8.1,<2.0.0)",
    "langchain-mcp-adapters (>=0.0.11,<0.0.12)",
    "langgraph (>=0.4.3,<0.5.0)",
    "langchain-anthropic (>=0.3.13,<0.4.0)",
    "langchain-core (>=0.3.59,<0.4.0)",
    "supabase (>=2.15.1,<3.0.0)",
    "langsmith (>=0.3.42,<0.4.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "sse-starlette (>=2.1.3,<3.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "pdfplumber (>=0.11.6,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
